fix: fix result embeds not on mobile, fix not found result embeds

--- a/src/css/en.css
+++ b/src/css/en.css
@@ -1,4 +1,4 @@
-.left.sort.image iframe,
-.right.sort.image iframe {
+.sort.image iframe,
+iframe.sort.image {
   background-image: url("https://sort.chimame.cafe/src/assets/not-available.jpg");
 }
